# shell_maker

./: CMakeLists.txt  README.md  shell_maker.sln
.github/workflows/: release.yml
shell_builder/: main.cpp  shell_builder.cpp  shell_builder.h  shell_builder.vcxproj  shell_builder.vcxproj.filters  shell_loader_exe_x64.h  shell_loader_exe_x86.h  utils.h
shell_loader/: shell_loader.c  shell_loader.vcxproj  shell_loader.vcxproj.filters  utils.h
text_parser/: exe2h.c  text_parser.vcxproj  text_parser.vcxproj.filters
